PPv09d-b20140627-r1 -Correccion de errores en modificacion de cuenta de comunidad.

--- a/WebContent/detallesprovision.xhtml
+++ b/WebContent/detallesprovision.xhtml
@@ -97,8 +97,8 @@
 											<h:outputText for="NumGastos" value="Gastos en provisión: " />
 											<p:inputText id="NumGastos" value="#{GestorDetallesProvision.sNumGastos}" size="6" disabled="true"/>
 
-											<h:outputText for="ValorTolal" value="Valor de provisión: " />
-											<p:inputText id="ValorTolal" value="#{GestorDetallesProvision.sValorTolal}" size="20" disabled="true"/>
+											<h:outputText for="ValorTotal" value="Valor de provisión: " />
+											<p:inputText id="ValorTotal" value="#{GestorDetallesProvision.sValorTotal}" size="20" disabled="true"/>
 											<h:outputText value="¤"/>
 
 											<h:outputText for="FechaEnvio" value="Fecha de envio: " />
