PPv09d-b20140703-r1 -Corregidos errores en detalles de provision.

--- a/WebContent/detallesprovision.xhtml
+++ b/WebContent/detallesprovision.xhtml
@@ -127,7 +127,7 @@
 										<h:panelGrid columns="5" cellpadding="5">
 
 											<h:outputText for="FechaIngresado" value="Fecha de ingreso: " />
-											<p:inputText id="FechaPagado" value="#{GestorDetallesProvision.sFechaIngresado}" size="9" disabled="true"/>
+											<p:inputText id="FechaIngresado" value="#{GestorDetallesProvision.sFechaIngresado}" size="9" disabled="true"/>
 
 											<h:outputText for="ValorIngresado" value="Valor ingresado: " />
 											<p:inputText id="ValorIngresado" value="#{GestorDetallesProvision.sValorIngresado}" size="20" disabled="true"/>
