--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -125,6 +125,13 @@
 															</f:facet>
 															<h:outputText value="#{gasto.NUPROF}" />
 														</p:column>
+														
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Estado Provisión" />
+															</f:facet>
+															<h:outputText value="#{gasto.ESTADOPROF}" />
+														</p:column>
 
 														<p:column>
 															<f:facet name="header">
@@ -180,6 +187,13 @@
 																<h:outputText value="Fecha de Pago" />
 															</f:facet>
 															<h:outputText value="#{gasto.FEEPAI}" />
+														</p:column>
+
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Tipo de Pago" />
+															</f:facet>
+															<h:outputText value="#{gasto.TIPOPAGO}" />
 														</p:column>
 
 							<f:facet name="footer">
