20140903 (subida de control)

--- a/WebContent/detallesprovision.xhtml
+++ b/WebContent/detallesprovision.xhtml
@@ -13,7 +13,7 @@
 		<h:form id="form" onkeypress="return event.keyCode != 13">
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="auto" header="Cerrar Provisión">
+				<p:layoutUnit position="north" size="auto" header="Detalles de la Provisión #{GestorDetallesProvision.sNUPROF}">
 								<h:panelGrid columns="3" cellpadding="5">
 						<p:fieldset legend="Sesión" id="sesion">
 							<h:panelGrid columns="1" cellpadding="1">
