--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -195,6 +195,13 @@
 															</f:facet>
 															<h:outputText value="#{gasto.TIPOPAGO}" />
 														</p:column>
+														
+														<p:column>
+															<f:facet name="header">
+																<h:outputText value="Urgente" />
+															</f:facet>
+															<h:outputText value="#{gasto.URGENTE}" />
+														</p:column>
 
 							<f:facet name="footer">
 								<h:commandLink>
