--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -118,5 +118,9 @@
 							<p:menuitem value="Registrar"
 								url="registrausuario.xhtml" icon="ui-icon-arrowthick-1-e" />
 						</p:submenu>
+						<p:submenu label="Informes">
+							<p:menuitem value="Generar"
+								url="generainformes.xhtml" icon="ui-icon-arrowthick-1-e" />
+						</p:submenu>						
 					</p:slideMenu>
 </html>
