PPv09d-b20140903-r1 -Filtro por número de finca registral

--- a/WebContent/bloqueoactivos.xhtml
+++ b/WebContent/bloqueoactivos.xhtml
@@ -165,6 +165,9 @@
 
 													<h:outputText for="NUPUACB" value="Puerta: " />
 													<p:inputText id="NUPUACB" value="#{GestorBloqueosActivo.sNUPUACB}" size="17" maxlength="17"/>
+													
+													<h:outputText for="NUFIREB" value="Finca Registral: " />
+													<p:inputText id="NUFIREB" value="#{GestorBloqueosActivo.sNUFIREB}" size="10" maxlength="9"/>
 
 												</h:panelGrid>
 											</p:panel>
