--- a/WebContent/ejecutaabono.xhtml
+++ b/WebContent/ejecutaabono.xhtml
@@ -421,6 +421,8 @@
 													<h:outputText for="NUPUACB" value="Puerta: " />
 													<p:inputText id="NUPUACB" value="#{GestorEjecucionAbono.sNUPUACB}" size="17" maxlength="17"/>
 
+													<h:outputText for="NUFIREB" value="Finca Registral: " />
+													<p:inputText id="NUFIREB" value="#{GestorEjecucionAbono.sNUFIREB}" size="10" maxlength="9"/>
 												</h:panelGrid>
 											</p:panel>
 
