--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -87,6 +87,8 @@
 													<h:outputText for="NUPUAC" value="Puerta: " />
 													<p:inputText id="NUPUAC" value="#{GestorListaActivos.sNUPUAC}" size="17" maxlength="17"/>
 
+													<h:outputText for="NUFIRE" value="Finca Registral: " />
+													<p:inputText id="NUFIRE" value="#{GestorListaActivos.sNUFIRE}" size="10" maxlength="9"/>
 
 													<h:outputText for="ESTADO" value="Estado de Activo: "/>
 													<p:selectOneMenu id="ESTADO" value="#{GestorListaActivos.sEstadoActivo}">
