--- a/WebContent/listacomunidades.xhtml
+++ b/WebContent/listacomunidades.xhtml
@@ -251,6 +251,10 @@
 
 												<h:outputText for="NUPUAC" value="Puerta: "/>
 												<p:inputText id="NUPUAC" value="#{GestorListaComunidades.sNUPUAC}" size="17" maxlength="17"/>
+
+												<h:outputText for="NUFIRE" value="Finca Registral: " />
+												<p:inputText id="NUFIRE" value="#{GestorListaComunidades.sNUFIRE}" size="10" maxlength="9"/>
+
 											</h:panelGrid>
 										</p:panel>
 											<p:panel id="panelBuscarReferencia" >
