--- a/WebContent/listacuotas.xhtml
+++ b/WebContent/listacuotas.xhtml
@@ -177,6 +177,10 @@
 
 												<h:outputText for="NUPUAC" value="Puerta: "/>
 												<p:inputText id="NUPUAC" value="#{GestorListaCuotas.sNUPUAC}" size="17" maxlength="17"/>
+
+												<h:outputText for="NUFIRE" value="Finca Registral: " />
+												<p:inputText id="NUFIRE" value="#{GestorListaCuotas.sNUFIRE}" size="10" maxlength="9"/>
+
 											</h:panelGrid>
 										</p:panel>
 
