--- a/WebContent/listaprovisiones.xhtml
+++ b/WebContent/listaprovisiones.xhtml
@@ -285,39 +285,29 @@
 											<p:panel id="panelBuscar" >
 												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="NOPRAC" value="Nombre de la Provincia: " />
-														<p:inputText id="NOPRAC" value="#{GestorListaProvisiones.sNOPRACF}" size="18" maxlength="18">
-														</p:inputText>
-													<p:message for="NOPRAC" display="icon"/>
+													<p:inputText id="NOPRAC" value="#{GestorListaProvisiones.sNOPRACF}" size="18" maxlength="18"/>
 
 													<h:outputText for="NOMUIN" value="Nombre del Municipio: " />
-														<p:inputText id="NOMUIN" value="#{GestorListaProvisiones.sNOMUINF}" size="30" maxlength="30">
-														</p:inputText>
-													<p:message for="NOMUIN" display="icon"/>
+													<p:inputText id="NOMUIN" value="#{GestorListaProvisiones.sNOMUINF}" size="30" maxlength="30"/>
 
 													<h:outputText for="COPOIN" value="Codigo Postal: " />
-														<p:inputText id="COPOIN" value="#{GestorListaProvisiones.sCOPOINF}" size="5" maxlength="5">
-														</p:inputText>
-													<p:message for="COPOIN" display="icon"/>
+													<p:inputText id="COPOIN" value="#{GestorListaProvisiones.sCOPOINF}" size="5" maxlength="5"/>
 
 													<h:outputText for="NOVIAS" value="Nombre de la Via: " />
-														<p:inputText id="NOVIAS" value="#{GestorListaProvisiones.sNOVIASF}" size="60" maxlength="60">
-														</p:inputText>
-													<p:message for="NOVIAS" display="icon"/>
+													<p:inputText id="NOVIAS" value="#{GestorListaProvisiones.sNOVIASF}" size="60" maxlength="60"/>
 
 													<h:outputText for="NUPOAC" value="Portal/Punto Kilometrico: " />
-														<p:inputText id="NUPOAC" value="#{GestorListaProvisiones.sNUPOACF}" size="17" maxlength="17">
-														</p:inputText>
-													<p:message for="NUPOAC" display="icon"/>
+													<p:inputText id="NUPOAC" value="#{GestorListaProvisiones.sNUPOACF}" size="17" maxlength="17"/>
 
 													<h:outputText for="NUPIAC" value="Piso: " />
-														<p:inputText id="NUPIAC" value="#{GestorListaProvisiones.sNUPIACF}" size="11" maxlength="11">
-														</p:inputText>
-													<p:message for="NUPIAC" display="icon"/>
+													<p:inputText id="NUPIAC" value="#{GestorListaProvisiones.sNUPIACF}" size="11" maxlength="11"/>
 
 													<h:outputText for="NUPUAC" value="Puerta: " />
-														<p:inputText id="NUPUAC" value="#{GestorListaProvisiones.sNUPUACF}" size="17" maxlength="17">
-														</p:inputText>
-													<p:message for="NUPUAC" display="icon"/>
+													<p:inputText id="NUPUAC" value="#{GestorListaProvisiones.sNUPUACF}" size="17" maxlength="17"/>
+
+													<h:outputText for="NUFIRE" value="Finca Registral: " />
+													<p:inputText id="NUFIRE" value="#{GestorListaProvisiones.sNUFIREF}" size="10" maxlength="9"/>
+
 												</h:panelGrid>
 											</p:panel>
 											<p:panel id="panelBuscarReferencia" >
