--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -326,6 +326,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorMovimientosComunidades.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorMovimientosComunidades.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 								<p:panel >
