--- a/WebContent/pagosimple.xhtml
+++ b/WebContent/pagosimple.xhtml
@@ -496,6 +496,9 @@
 													<h:outputText for="NUPUACB" value="Puerta: " />
 													<p:inputText id="NUPUACB" value="#{GestorPagosSimple.sNUPUACB}" size="17" maxlength="17"/>
 
+													<h:outputText for="NUFIREB" value="Finca Registral: " />
+													<p:inputText id="NUFIREB" value="#{GestorPagosSimple.sNUFIREB}" size="10" maxlength="9"/>
+
 												</h:panelGrid>
 											</p:panel>
 
