--- a/WebContent/revisapago.xhtml
+++ b/WebContent/revisapago.xhtml
@@ -501,6 +501,9 @@
 													<h:outputText for="NUPUACB" value="Puerta: " />
 													<p:inputText id="NUPUACB" value="#{GestorRevisionPagos.sNUPUACB}" size="17" maxlength="17"/>
 
+													<h:outputText for="NUFIREB" value="Finca Registral: " />
+													<p:inputText id="NUFIREB" value="#{GestorRevisionPagos.sNUFIREB}" size="10" maxlength="9"/>
+
 												</h:panelGrid>
 											</p:panel>
 
