--- a/WebContent/abono.xhtml
+++ b/WebContent/abono.xhtml
@@ -291,6 +291,9 @@
 										<p:inputText id="NUPIACB" value="#{GestorAbonos.sNUPIACB}" size="11" maxlength="11"/>
 										<h:outputText for="NUPUACB" value="Puerta: " />
 										<p:inputText id="NUPUACB" value="#{GestorAbonos.sNUPUACB}" size="17" maxlength="17"/>
+										
+										<h:outputText for="NUFIREB" value="Finca Registral: " />
+										<p:inputText id="NUFIREB" value="#{GestorAbonos.sNUFIREB}" size="10" maxlength="9"/>
 									</h:panelGrid>
 								</p:panel>
 								<p:panel >
