--- a/WebContent/errorescomunidades.xhtml
+++ b/WebContent/errorescomunidades.xhtml
@@ -295,6 +295,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorErroresComunidades.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorErroresComunidades.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 								<p:panel >
