--- a/WebContent/erroresferencias.xhtml
+++ b/WebContent/erroresferencias.xhtml
@@ -299,6 +299,9 @@
 
 										<h:outputText for="NUPUAC" value="Puerta: " />
 										<p:inputText id="NUPUAC" value="#{GestorErroresReferenciasCatastrales.sNUPUAC}" size="17" maxlength="17"/>
+										
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorErroresReferenciasCatastrales.sNUFIRE}" size="10" maxlength="9"/>
 
 									</h:panelGrid>
 								</p:panel>
