--- a/WebContent/erroresgastos.xhtml
+++ b/WebContent/erroresgastos.xhtml
@@ -449,6 +449,9 @@
 
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorErroresGastos.sNUPUAC}" size="17" maxlength="17"/>
+										
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorErroresGastos.sNUFIRE}" size="10" maxlength="9"/>
 
 									</h:panelGrid>
 								</p:panel>
