--- a/WebContent/erroresimpuestos.xhtml
+++ b/WebContent/erroresimpuestos.xhtml
@@ -324,6 +324,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorErroresImpuestosRecursos.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorErroresImpuestosRecursos.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
