--- a/WebContent/gestioncuentasactivos.xhtml
+++ b/WebContent/gestioncuentasactivos.xhtml
@@ -303,6 +303,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: " />
 										<p:inputText id="NUPUAC" value="#{GestorCuentasActivos.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorCuentasActivos.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
