--- a/WebContent/gestioncuentascomunidad.xhtml
+++ b/WebContent/gestioncuentascomunidad.xhtml
@@ -401,6 +401,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorCuentasComunidades.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorCuentasComunidades.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 								<p:panel >
