--- a/WebContent/listaimpuestos.xhtml
+++ b/WebContent/listaimpuestos.xhtml
@@ -231,6 +231,10 @@
 
 												<h:outputText for="NUPUAC" value="Puerta: "/>
 												<p:inputText id="NUPUAC" value="#{GestorListaImpuestos.sNUPUAC}" size="17" maxlength="17"/>
+
+												<h:outputText for="NUFIRE" value="Finca Registral: " />
+												<p:inputText id="NUFIRE" value="#{GestorListaImpuestos.sNUFIRE}" size="10" maxlength="9"/>
+
 											</h:panelGrid>
 										</p:panel>
 
