--- a/WebContent/listareferencias.xhtml
+++ b/WebContent/listareferencias.xhtml
@@ -243,6 +243,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: " />
 										<p:inputText id="NUPUAC" value="#{GestorListaReferencias.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorListaReferencias.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
