--- a/WebContent/movimientosgastos.xhtml
+++ b/WebContent/movimientosgastos.xhtml
@@ -336,6 +336,8 @@
 										<p:inputText id="NUPIACB" value="#{GestorMovimientosGastos.sNUPIACB}" size="11" maxlength="11"/>
 										<h:outputText for="NUPUACB" value="Puerta: " />
 										<p:inputText id="NUPUACB" value="#{GestorMovimientosGastos.sNUPUACB}" size="17" maxlength="17"/>
+										<h:outputText for="NUFIREB" value="Finca Registral: " />
+										<p:inputText id="NUFIREB" value="#{GestorMovimientosGastos.sNUFIREB}" size="10" maxlength="9"/>
 									</h:panelGrid>
 								</p:panel>
 								<p:panel >
