--- a/WebContent/movimientosimpuestos.xhtml
+++ b/WebContent/movimientosimpuestos.xhtml
@@ -351,6 +351,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorMovimientosImpuestosRecursos.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorMovimientosImpuestosRecursos.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
