--- a/WebContent/movimientosreferencias.xhtml
+++ b/WebContent/movimientosreferencias.xhtml
@@ -329,6 +329,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: " />
 										<p:inputText id="NUPUAC" value="#{GestorMovimientosReferenciasCatastrales.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorMovimientosReferenciasCatastrales.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
