--- a/WebContent/pagoconexion.xhtml
+++ b/WebContent/pagoconexion.xhtml
@@ -429,6 +429,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorPagosConexion.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorPagosConexion.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
