--- a/WebContent/registracomunidad.xhtml
+++ b/WebContent/registracomunidad.xhtml
@@ -316,6 +316,9 @@
 										<h:outputText for="NUPUAC" value="Puerta: "/>
 										<p:inputText id="NUPUAC" value="#{GestorComunidades.sNUPUAC}" size="17" maxlength="17"/>
 
+										<h:outputText for="NUFIRE" value="Finca Registral: " />
+										<p:inputText id="NUFIRE" value="#{GestorComunidades.sNUFIRE}" size="10" maxlength="9"/>
+
 									</h:panelGrid>
 								</p:panel>
 
